# MCP-Drift

./: .gitignore  README.md  multi_runner.py  package-lock.json  package.json  pyproject.toml  report_generator.py  requirements.txt
.claude/: settings.json
docs/: Report.md  manual.md  related_work.md
mcpdrift/: __init__.py  logging_utils.py
results/: aggregate.py  benchmark_report.md  manual_benchmark_summary_20260515.md
scripts/: check_false_positives.py  format_drift_case.py  generate_analysis_docx.js  hunt_drift.py  run_recovery_metric.py  validate_docx_local.py  validate_scenarios.py  validate_traces.py
tests/: test_aggregate.py  test_benchmark_runner.py  test_e2e_pipeline.py  test_evaluation.py  test_judge_false_positives.py  test_manual_runner.py  test_mock_server.py  test_multi_turn_engine.py  test_providers.py  test_report_generator.py  test_sanitizer.py  test_scenarios.py
traces/: deepseek_deepseek-v4-flash_mt_delayed_env_no_defense_20260501T184926Z.json  deepseek_deepseek-v4-flash_mt_delayed_env_no_defense_20260531T183059Z.json  deepseek_deepseek-v4-flash_mt_delayed_env_no_defense_20260531T185734Z.json  deepseek_deepseek-v4-flash_mt_delayed_env_no_defense_20260531T185740Z.json  deepseek_deepseek-v4-flash_mt_delayed_ssh_no_defense_20260501T184943Z.json  deepseek_deepseek-v4-flash_mt_delayed_ssh_no_defense_20260531T185922Z.json  deepseek_deepseek-v4-flash_mt_delayed_ssh_no_defense_20260531T185947Z.json  deepseek_deepseek-v4-flash_mt_history_reinforce_no_defense_20260501T184955Z.json  openai_gpt-4.1_mt_delayed_env_no_defense_20260531T185742Z.json  (+158 more)
(+247 files in other folders)
