[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpdrift"
version = "0.1.0"
description = "Multi-turn security benchmark for MCP agents — measures behavioral degradation under tool poisoning"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastmcp",
    "anthropic>=0.40",
    "openai>=1.0.0",
    "mcp",
    "pydantic>=2.0",
    "jsonschema",
    "numpy",
    "statsmodels>=0.14.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpdrift*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
